--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -2,23 +2,21 @@
 <html lang="pt-br">
 <head>
 	<meta charset="UTF-8">
-	<title>ROCK PAPER SCISSORS - Jujuba's Games</title>
+	<title>ROCK PAPER SCISSORS</title>
 	<link type="text/css" rel="stylesheet" href="rock-paper-scissors.css" >
 	<script src="rock-paper-scissors.js" type="text/javascript"></script>
 
 </head>
 <body>
-	<div class="bodyPage">
-		<h1>Rock-Paper-Scissors by Jujuba's Games</h1>
-		<div id="gameImages" class="images">
-			<img src="rock.png" width="200" height="200">
-			<img  src="paper.png" width="200" height="200">
-			<img  src="scissors.png" width="200" height="200">
-		</div>
-	
+	<div id="initialScreen">
+		<h1>Rock Paper Scissors</h1>
+		Nome:<input type="text" id="nomePlayer">
 		<br>
-		<div id="playGame">
-			<button id="playButton" class="buttons" onclick="setJogador()">Play Game!</button>
-		</div>
+		<input type="radio" name="gender" id="genderMale">Masculino
+		<br>
+		<input type="radio" name="gender" id="genderFemale">Feminino
+		<br>
+		<button id="playGame" onclick="playGame()" >Play Game!</button>
+		<br>
 	</div>
 </body>
